syntax = "proto2";

//本文件定义客户端与登录服务器的交互命令

//以下为客户端发给服务器的命令和回应

//命令ID：1，请求登录
message CMD_Login
{
	optional uint64 UserID = 1; //用户ID。为0表示微信登录
	optional string Password = 2;  //密码
	optional int32 WeiXinCode = 3; //微信授权码。如果是用ID和密码登录，则忽略该参数
}
message RSP_Login
{
	optional uint64 UserID = 1;  //用户ID，0表示服务器拒绝。如果拒绝，则忽略以下全部参数。
	optional string Password = 2; //密码
	optional uint32 RoomID = 3; //如果正在游戏中，则表示房号。为0表示不在游戏中。
	optional string GameName = 4; //如果正在游戏中，则表示游戏名。不在游戏中则忽略该值。
}

//命令ID：2，请求创建并进入房间
message CMD_CreateRoom
{
	optional string GameName = 1;  //游戏名
	optional uint32 RoundCount = 2; //局数
	optional string Rule = 3; //游戏规则，具体格式由游戏服务器和客户端议定
}
message RSP_CreateRoom
{
	optional uint32 RoomID = 1; //房间号。为0表示创建失败。如果失败，则忽略以下除ErrorInfo之外的全部参数。
	optional string ServerHost = 2; //游戏服域名
	optional int32 ServerPort = 3; //游戏服端口
	optional uint32 SeatID = 4; //座位号
	optional string Password = 5; //临时密码
	optional string ErrorInfo = 6; //如果创建失败，则表示失败的详细信息，具体格式由游戏服务器和客户端议定。创建成功则忽略该值。
}

//命令ID：3，请求进入房间
message CMD_EnterRoom
{
	optional uint32 RoomID = 1;  //房间号
}
message RSP_EnterRoom
{
	optional int32 Error = 1; //0表示成功，-1表示房间不存在或已解散，-2表示房间已满。如果不成功，则忽略以下全部参数。
	optional string ServerHost = 2; //游戏服域名
	optional int32 ServerPort = 3; //游戏服端口
	optional uint32 SeatID = 4; //座位号
	optional string Password = 5; //临时密码
	optional uint32 RoundCount = 6;//房间的总局数
	optional string Rule = 7; //房间的游戏规则，与CMD_CreateRoom中的Rule参数一致。
}

//命令ID：4，请求进入大厅房间
message CMD_EnterHall
{
	optional string GameName = 1;  //游戏名
	optional string Rule = 2; //游戏规则，与CMD_CreateRoom中的Rule参数一致。
}
message RSP_EnterHall
{
	optional uint32 RoomID = 1; //房间号。为0表示游戏名不存在或规则错误。
	optional string ServerHost = 2; //游戏服域名
	optional int32 ServerPort = 3; //游戏服端口
	optional uint32 SeatID = 4; //座位号
	optional string Password = 5; //临时密码
}

